--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,9 @@
-@import "./utils/variables.scss";
-@import "../sass/components/logo.scss";
+@import "./start-settings";
+
+@import "./components/logo";
+@import "./components/main-nav";
+@import "./components/site-nav";
+@import "./components/contacts";
+
+@import "./components/hero";
+@import "./components/features";
