--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,3 +7,7 @@ $footer-navigation-color: rgba(255, 255, 255, 0.6);
 $copyright-color: rgba(255, 255, 255, 0.4);
 $icon-color: #afb1b8;
 $cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
+
+$font-main: Roboto, sans-serif;
+$font-logo: Raleway,sans-serif;
+
