--- a/css/main.css
+++ b/css/main.css
@@ -83,11 +83,11 @@ img {
   margin-left: 86px;
 }
 
-.site-nav.item + .item {
+.site-nav .item + .item {
   margin-left: 50px;
 }
 
-.site-nav.link {
+.site-nav .link {
   display: block;
   padding-top: 32px;
   padding-bottom: 32px;
@@ -100,16 +100,16 @@ img {
   color: #212121;
 }
 
-.site-nav.link:hover, .site-nav.link:focus, .site-nav.link:active {
+.site-nav .link:hover, .site-nav .link:focus, .site-nav .link:active {
   color: #2196f3;
 }
 
-.site-nav.link.current {
+.site-nav .link.current {
   position: relative;
   color: #2196f3;
 }
 
-.site-nav.link::after {
+.site-nav .link::after {
   position: absolute;
   bottom: 0px;
   border-radius: 2px;
@@ -133,14 +133,11 @@ img {
           justify-content: center;
 }
 
-.contact.item {
+.contact .item {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-}
-
-.contact.item + .contact.item {
-  margin-left: 30px;
+  margin-right: 30px;
 }
 
 .contact .link {
@@ -157,7 +154,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-  color: #7575;
+  color: #757575;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -166,7 +163,7 @@ img {
   color: #2196f3;
 }
 
-.link-icon {
+.contact .link-icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -195,6 +192,88 @@ img {
   background-position: center;
   background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(47, 48, 58, 0.8)), to(rgba(47, 48, 58, 0.8))), url("../images/Header_img.jpg");
   background-image: linear-gradient(rgba(47, 48, 58, 0.8), rgba(47, 48, 58, 0.8)), url("../images/Header_img.jpg");
+}
+
+.button-portfolio {
+  padding: 6px 22px;
+  border: 0px;
+  border-radius: 4px;
+  font-family: inherit;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #212121;
+  background-color: #f5f4fa;
+}
+
+.button-portfolio:last-child {
+  margin-right: 0px;
+}
+
+.button-portfolio:hover, .button-portfolio:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+}
+
+.button-hero {
+  display: inline-block;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button:focus {
+  color: #2196f3;
+}
+
+.button-form {
+  display: inline-block;
+  padding: 10px 55px 10px 56px;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: #ffffff;
+  background-color: #2196f3;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-form:focus {
+  color: #2196f3;
+}
+
+.exit-modal {
+  position: absolute;
+  display: block;
+  top: 0;
+  right: 0;
+  width: 30px;
+  height: 30px;
+  border: 0px;
+  border-radius: 50%;
+  -webkit-transform: translate(9px, -9px);
+          transform: translate(9px, -9px);
+  background-image: url("../images/close.svg");
+  background-size: 18px, 18px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
 }
 
 .features {
@@ -269,6 +348,362 @@ img {
   margin-bottom: 0px;
   font-size: 14px;
   line-height: 1.71;
-  color: #7575;
+  color: #757575;
+}
+
+.works {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.works .item {
+  position: relative;
+  margin-right: 30px;
+}
+
+.works .item:last-child {
+  margin-right: 0px;
+}
+
+.desktop {
+  width: 370px;
+  height: 294px;
+  background-image: url("../images/Desktop_applications.jpg");
+}
+
+.mobile {
+  width: 370px;
+  height: 294px;
+  background-image: url("../images/Mobile_applications.jpg");
+}
+
+.design {
+  width: 370px;
+  height: 294px;
+  background-image: url("../images/Design_solutions.jpg");
+}
+
+.section-caption {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  padding: 27px 0px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-align: center;
+  text-transform: uppercase;
+  color: #ffffff;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.caption-text {
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.section.our {
+  background-color: #f5f4fa;
+}
+
+.team {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.team > .item:last-child {
+  margin-right: 0px;
+}
+
+.team > .item {
+  margin-right: 30px;
+  -webkit-box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
+}
+
+.team-cards {
+  height: 162px;
+  background-color: #ffffff;
+}
+
+.team-social {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.team-social .team-link {
+  margin-right: 10px;
+}
+
+.social-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: #afb1b8;
+  background-color: #ffffff;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social-block:hover, .social-block:focus {
+  fill: #ffffff;
+  background-color: #2196f3;
+}
+
+.section-heading {
+  margin-top: 0px;
+  margin-bottom: 10px;
+  padding-top: 30px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+}
+
+.section-headline {
+  margin-top: 0px;
+  margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.19;
+  text-align: center;
+  color: #757575;
+}
+
+.clients {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.clients > .company {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-right: 30px;
+  text-align: center;
+}
+
+.clients > .company:last-child {
+  margin-right: 0px;
+}
+
+.client-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 170px;
+  height: 90px;
+  border-radius: 4px;
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  fill: #afb1b8;
+  border: 1px solid #afb1b8;
+}
+
+.client-block:hover, .client-block:focus {
+  fill: #2196f3;
+  border: 1px solid #2196f3;
+}
+
+.footer {
+  background-color: #2f303a;
+}
+
+.footer-main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: #2f303a;
+}
+
+.footer.logo {
+  display: inline-block;
+  margin-bottom: 10px;
+  padding-top: 48px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+}
+
+.footer.logo:focus {
+  color: #2196f3;
+}
+
+.footer-contact .adress {
+  display: block;
+  margin-bottom: 9px;
+  margin-top: 0px;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--background-color);
+}
+
+.footer-contact .mail {
+  display: block;
+  margin-bottom: 9px;
+  margin-top: 0px;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--footer-navigation-color);
+}
+
+.footer-contact .phone {
+  display: block;
+  margin-bottom: 28px;
+  margin-top: 0px;
+  font-size: 14px;
+  line-height: 1.71;
+  color: var(--footer-navigation-color);
+}
+
+.social-icon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.social-icon > .footer-icon:last-child {
+  margin-right: 0px;
+}
+
+.social-icon > .footer-icon {
+  margin-right: 10px;
+}
+
+.footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  fill: var(--background-color);
+  background-color: rgba(255, 255, 255, 0.1);
+  -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-block:hover,
+.footer-block:focus {
+  fill: var(--background-color);
+  background-color: var(--accent-color);
+}
+
+.footer .title {
+  display: inline-block;
+  margin-bottom: 21px;
+  margin-top: 0px;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: var(--background-color);
+}
+
+.footer-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 10px 32px;
+  border-radius: 4px;
+  border: 0px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  text-align: center;
+  letter-spacing: 0.06em;
+  color: var(--background-color);
+  background-color: var(--accent-color);
+}
+
+.footer-form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-input {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding-left: 12px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 16px;
+  line-height: 1.25;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  color: var(--footer-navigation-color);
+  background-color: #2f303a;
+}
+
+.footer-mail {
+  margin-left: 10px;
+  fill: var(--background-color);
+}
+
+.footer .copyright {
+  text-align: center;
+  font-size: 12px;
+  line-height: 2;
+  color: var(--copyright-color);
+}
+
+.container .copyright {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  border-top: 1px solid rgba(255, 255, 255, 0.1);
 }
 /*# sourceMappingURL=main.css.map */
