--- a/sass/components/_site-nav.scss
+++ b/sass/components/_site-nav.scss
@@ -1,45 +1,45 @@
 @import "../utils/variables";
+
 .site-nav {
   display: flex;
   margin-left: 86px;
-  &.item + .item {
+  .item + .item {
     margin-left: 50px;
   }
-}
-
-.site-nav.link {
-  display: block;
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-
-  transition: color 250ms $cubic-bezier;
-
-  color: $primary-text-color;
-  &:hover,
-  &:focus,
-  &:active {
-    color: $accent-color;
-  }
-  &.current {
-    position: relative;
-
-    color: $accent-color;
-  }
-  &::after {
-    position: absolute;
-    bottom: 0px;
-    border-radius: 2px;
-
-    content: "";
+  .link {
     display: block;
-    width: 100%;
-    height: 4px;
+    padding-top: 32px;
+    padding-bottom: 32px;
 
-    background-color: $accent-color;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.02em;
+
+    transition: color 250ms $cubic-bezier;
+
+    color: $primary-text-color;
+    &:hover,
+    &:focus,
+    &:active {
+      color: $accent-color;
+    }
+    &.current {
+      position: relative;
+
+      color: $accent-color;
+    }
+    &::after {
+      position: absolute;
+      bottom: 0px;
+      border-radius: 2px;
+
+      content: "";
+      display: block;
+      width: 100%;
+      height: 4px;
+
+      background-color: $accent-color;
+    }
   }
 }
