--- a/sass/main.scss
+++ b/sass/main.scss
@@ -6,4 +6,12 @@
 @import "./components/contacts";
 
 @import "./components/hero";
+
+@import "./components/buttons";
+
 @import "./components/features";
+
+@import "./components/works";
+@import "./components/team";
+@import "./components/clients";
+@import "./components/footer";
