--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,13 +1,13 @@
 $primary-text-color: #212121;
-$secondary-text-color: #7575;
+$secondary-text-color: #757575;
 $background-color: #ffffff;
 $secondary-background-color: #f5f4fa;
 $accent-color: #2196f3;
+$footer-color: #2f303a;
 $footer-navigation-color: rgba(255, 255, 255, 0.6);
 $copyright-color: rgba(255, 255, 255, 0.4);
 $icon-color: #afb1b8;
 $cubic-bezier: cubic-bezier(0.4, 0, 0.2, 1);
 
 $font-main: Roboto, sans-serif;
-$font-logo: Raleway,sans-serif;
-
+$font-logo: Raleway, sans-serif;
