--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,8 +1,11 @@
 @import "./start-settings";
 
 @import "./components/logo";
+
 @import "./components/main-nav";
+
 @import "./components/site-nav";
+
 @import "./components/contacts";
 
 @import "./components/hero";
@@ -12,6 +15,11 @@
 @import "./components/features";
 
 @import "./components/works";
+
 @import "./components/team";
+
 @import "./components/clients";
+
 @import "./components/footer";
+
+@import "./components/portfolio";
