--- a/css/main.css
+++ b/css/main.css
@@ -51,7 +51,11 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.logo:hover, .logo:focus {
+.logo .accent {
+  color: #2196f3;
+}
+
+.logo:focus {
   color: #2196f3;
 }
 
@@ -541,10 +545,9 @@ img {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background-color: #2f303a;
 }
 
-.footer.logo {
+.footer .logo {
   display: inline-block;
   margin-bottom: 10px;
   padding-top: 48px;
@@ -553,7 +556,7 @@ img {
   color: #ffffff;
 }
 
-.footer.logo:focus {
+.footer .logo:focus {
   color: #2196f3;
 }
 
@@ -563,7 +566,7 @@ img {
   margin-top: 0px;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--background-color);
+  color: #ffffff;
 }
 
 .footer-contact .mail {
@@ -572,7 +575,7 @@ img {
   margin-top: 0px;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--footer-navigation-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .footer-contact .phone {
@@ -581,7 +584,7 @@ img {
   margin-top: 0px;
   font-size: 14px;
   line-height: 1.71;
-  color: var(--footer-navigation-color);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .social-icon {
@@ -590,12 +593,12 @@ img {
   display: flex;
 }
 
-.social-icon > .footer-icon:last-child {
-  margin-right: 0px;
-}
-
 .social-icon > .footer-icon {
   margin-right: 10px;
+}
+
+.social-icon > .footer-icon:last-child {
+  margin-right: 0px;
 }
 
 .footer-block {
@@ -611,16 +614,15 @@ img {
   width: 44px;
   height: 44px;
   border-radius: 50%;
-  fill: var(--background-color);
+  fill: #ffffff;
   background-color: rgba(255, 255, 255, 0.1);
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-block:hover,
-.footer-block:focus {
-  fill: var(--background-color);
-  background-color: var(--accent-color);
+.footer-block:hover, .footer-block:focus {
+  fill: #ffffff;
+  background-color: #2196f3;
 }
 
 .footer .title {
@@ -631,7 +633,7 @@ img {
   font-size: 14px;
   line-height: 1.14;
   text-transform: uppercase;
-  color: var(--background-color);
+  color: #ffffff;
 }
 
 .footer-button {
@@ -649,8 +651,8 @@ img {
   line-height: 1.9;
   text-align: center;
   letter-spacing: 0.06em;
-  color: var(--background-color);
-  background-color: var(--accent-color);
+  color: #ffffff;
+  background-color: #2196f3;
 }
 
 .footer-form {
@@ -677,20 +679,20 @@ img {
   line-height: 1.25;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  color: var(--footer-navigation-color);
+  color: rgba(255, 255, 255, 0.6);
   background-color: #2f303a;
 }
 
 .footer-mail {
   margin-left: 10px;
-  fill: var(--background-color);
+  fill: #ffffff;
 }
 
 .footer .copyright {
   text-align: center;
   font-size: 12px;
   line-height: 2;
-  color: var(--copyright-color);
+  color: rgba(255, 255, 255, 0.4);
 }
 
 .container .copyright {
@@ -705,5 +707,125 @@ img {
   margin-top: 0px;
   margin-bottom: 0px;
   border-top: 1px solid rgba(255, 255, 255, 0.1);
+}
+
+.portfolio.page-header {
+  border-bottom: 1px solid #ececec;
+}
+
+.portfolio.main {
+  padding-top: 93px;
+  padding-bottom: 94px;
+}
+
+.filter-button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin-bottom: 50px;
+}
+
+.filter-button > .item + .item {
+  margin-left: 8px;
+}
+
+.filter {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.filter.card {
+  width: 370px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+}
+
+.filter.card:nth-child(3n) {
+  margin-right: 0px;
+}
+
+.filter.card:nth-last-child(-n + 3) {
+  margin-bottom: 0px;
+}
+
+.filter.card:hover, .filter.card:focus {
+  -webkit-box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+          box-shadow: 1px 4px 6px rgba(0, 0, 0, 0.16), 0px 4px 4px rgba(0, 0, 0, 0.06), 0px 1px 1px rgba(0, 0, 0, 0.12);
+}
+
+.filter.card {
+  margin-right: 8px;
+  border-radius: 4px;
+  -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.filter.card:last-child {
+  margin-right: 0px;
+}
+
+.card-link {
+  display: block;
+}
+
+.card-link:hover .description,
+.card-link:focus .description {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.card-foto {
+  position: relative;
+  overflow: hidden;
+}
+
+.card-content {
+  padding: 24px 20px;
+  border: 1px solid #eeeeee;
+}
+
+.filter .title {
+  margin-top: 0px;
+  margin-bottom: 4px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  color: #212121;
+}
+
+.filter .text {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  font-size: 16px;
+  line-height: 1.88;
+  color: #757575;
+}
+
+.description {
+  position: absolute;
+  top: 0;
+  margin: 0;
+  padding: 63px 24px;
+  width: 100%;
+  height: 100%;
+  font-size: 18px;
+  line-height: 1.56;
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
+  -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  color: #ffffff;
+  background-color: rgba(33, 150, 243, 0.9);
 }
 /*# sourceMappingURL=main.css.map */
