--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -6,11 +6,8 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-
-    background-color: #2f303a;
   }
-
-  &.logo {
+  .logo {
     display: inline-block;
     margin-bottom: 10px;
     padding-top: 48px;
@@ -24,49 +21,47 @@
   }
 }
 
-.footer-contact .adress {
-  display: block;
-  margin-bottom: 9px;
-  margin-top: 0px;
+.footer-contact {
+  .adress {
+    display: block;
+    margin-bottom: 9px;
+    margin-top: 0px;
 
-  font-size: 14px;
-  line-height: 1.71;
+    font-size: 14px;
+    line-height: 1.71;
 
-  color: var(--background-color);
-}
+    color: $background-color;
+  }
+  .mail {
+    display: block;
+    margin-bottom: 9px;
+    margin-top: 0px;
 
-.footer-contact .mail {
-  display: block;
-  margin-bottom: 9px;
-  margin-top: 0px;
+    font-size: 14px;
+    line-height: 1.71;
 
-  font-size: 14px;
-  line-height: 1.71;
+    color: $footer-navigation-color;
+  }
+  .phone {
+    display: block;
+    margin-bottom: 28px;
+    margin-top: 0px;
 
-  color: var(--footer-navigation-color);
-}
+    font-size: 14px;
+    line-height: 1.71;
 
-.footer-contact .phone {
-  display: block;
-  margin-bottom: 28px;
-  margin-top: 0px;
-
-  font-size: 14px;
-  line-height: 1.71;
-
-  color: var(--footer-navigation-color);
+    color: $footer-navigation-color;
+  }
 }
 
 .social-icon {
   display: flex;
-}
-
-.social-icon > .footer-icon:last-child {
-  margin-right: 0px;
-}
-
-.social-icon > .footer-icon {
-  margin-right: 10px;
+  > .footer-icon {
+    margin-right: 10px;
+  }
+  > .footer-icon:last-child {
+    margin-right: 0px;
+  }
 }
 
 .footer-block {
@@ -77,17 +72,15 @@
   height: 44px;
   border-radius: 50%;
 
-  fill: var(--background-color);
+  fill: $background-color;
   background-color: rgba(255, 255, 255, 0.1);
 
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-block:hover,
-.footer-block:focus {
-  fill: var(--background-color);
-  background-color: var(--accent-color);
+  transition: fill 250ms $cubic-bezier, background-color 250ms $cubic-bezier;
+  &:hover,
+  &:focus {
+    fill: $background-color;
+    background-color: $accent-color;
+  }
 }
 
 .footer .title {
@@ -100,7 +93,7 @@
   line-height: 1.14;
   text-transform: uppercase;
 
-  color: var(--background-color);
+  color: $background-color;
 }
 
 .footer-button {
@@ -117,8 +110,8 @@
   text-align: center;
   letter-spacing: 0.06em;
 
-  color: var(--background-color);
-  background-color: var(--accent-color);
+  color: $background-color;
+  background-color: $accent-color;
 }
 
 .footer-form {
@@ -143,13 +136,13 @@
 
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 
-  color: var(--footer-navigation-color);
-  background-color: #2f303a;
+  color: $footer-navigation-color;
+  background-color: $footer-color;
 }
 
 .footer-mail {
   margin-left: 10px;
-  fill: var(--background-color);
+  fill: $background-color;
 }
 
 .footer .copyright {
@@ -158,7 +151,7 @@
   font-size: 12px;
   line-height: 2;
 
-  color: var(--copyright-color);
+  color: $copyright-color;
 }
 
 .container .copyright {
