--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -8,8 +8,9 @@
   color: $primary-text-color;
 
   transition: color 250ms $cubic-bezier;
-
-  &:hover,
+  .accent {
+    color: $accent-color;
+  }
   &:focus {
     color: $accent-color;
   }
